<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">W Status</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_clearDB">Clear DB</string>
    <string name="button_Tweet">Tweet</string>
    <string name="etStatusText">What\'s up</string>
    <string name="username">Username</string>
    <string name="username_summary">Enter the username (default: test)</string>
    <string name="password">Password</string>
    <string name="summary_password">Enter the password (default: password)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="itemAdd">Add</string>
    <string name="Toast_checkUsernameAndPassword">Check username and password</string>
    <string name="counter_tooLong">Your text is too long !</string>
    <string name="dialog_del1item">Do You really want to delete this item ? </string>
    <string name="dialog_delAll">Do You really want to delete all the data ? </string>
    <string name="URL">URL</string>
    <string name="URL_Summary">If You want to use default URL - leave this field blank</string>
    <string name="notificationTitle">New status</string>
    <string name="interval">Interval</string>
    <string name="interval_summary">Period between refreshes (after changing this value - restart device)</string>
    <string name="update_status">Update</string>

</resources>
