<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />
    
    <EditTextPreference
        android:key="password"
        android:summary="@string/summary_password"
        android:title="@string/password" 
        android:inputType="textPassword"/>
    
    <EditTextPreference
        android:key="URL"
        android:summary="@string/URL_Summary"
        android:title="@string/URL" />
    
    <ListPreference
        android:entries="@array/interval_names"
        android:entryValues="@array/interval_values"
        android:key="interv"
        android:summary="@string/interval_summary"
        android:title="@string/interval"/>

</PreferenceScreen>