<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wojtek.wstatus.MainActivity" >

    <item android:id="@+id/action_add" 
        android:title="@string/itemAdd" 
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    
    <item
        android:id="@+id/action_clearDB"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_clearDB"
        android:icon="@android:drawable/ic_menu_delete"/>
    
</menu>
